[gd_scene load_steps=14 format=2]

[ext_resource path="res://Levels/Designs/SciFi-Metal-Walls.png" type="Texture" id=1]
[ext_resource path="res://Levels/Designs/SciFi-Metal-DoorTop.res" type="SpriteFrames" id=2]
[ext_resource path="res://Levels/Room.gd" type="Script" id=4]
[ext_resource path="res://Levels/Designs/SciFi-Metal-DoorLeft.res" type="SpriteFrames" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 12.6745 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.8686, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.425, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 72, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 16 )

[node name="ScifiMetalRoom" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="Walls" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 160, 120 )

[node name="Door_Top" type="AnimatedSprite" parent="."]
position = Vector2( 160, 24 )
frames = ExtResource( 2 )
animation = "Open"
playing = true

[node name="Door_top_TravelArea" type="Area2D" parent="Door_Top"]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_Top/Door_top_TravelArea"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Door_Bottom" type="AnimatedSprite" parent="."]
position = Vector2( 160, 216 )
rotation = 3.14159
frames = ExtResource( 2 )
animation = "Open"
playing = true

[node name="Door_bottom_TravelArea" type="Area2D" parent="Door_Bottom"]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_Bottom/Door_bottom_TravelArea"]
position = Vector2( 1.52588e-05, -8 )
shape = SubResource( 1 )

[node name="Door_Right" type="AnimatedSprite" parent="."]
position = Vector2( 296, 120 )
rotation = 3.14159
frames = ExtResource( 5 )
animation = "Open"

[node name="Door_right_TravelArea" type="Area2D" parent="Door_Right"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_Right/Door_right_TravelArea"]
position = Vector2( -8, -2.28882e-05 )
shape = SubResource( 3 )

[node name="Door_Left" type="AnimatedSprite" parent="."]
position = Vector2( 24, 120 )
frames = ExtResource( 5 )
animation = "Open"

[node name="Door_left_TravelArea" type="Area2D" parent="Door_Left"]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_Left/Door_left_TravelArea"]
position = Vector2( -8, 0 )
shape = SubResource( 2 )

[node name="CollisionShape_L" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 176 )
shape = SubResource( 4 )

[node name="CollisionShape_L2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 64 )
shape = SubResource( 4 )

[node name="CollisionShape_R" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 304, 64 )
shape = SubResource( 4 )

[node name="CollisionShape_R2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 304, 168 )
shape = SubResource( 4 )

[node name="CollisionShape_T" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 72, 16 )
shape = SubResource( 5 )

[node name="CollisionShape_T2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 248, 16 )
shape = SubResource( 5 )

[node name="CollisionShape_T3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 72, 224 )
shape = SubResource( 5 )

[node name="CollisionShape_T4" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 248, 224 )
shape = SubResource( 5 )

[node name="CollisionShape_Door_Top" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 160, 16 )
shape = SubResource( 6 )

[node name="CollisionShape_Door_Bottom" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 160, 224 )
shape = SubResource( 7 )

[node name="CollisionShape_Door_Left" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 120 )
shape = SubResource( 8 )

[node name="CollisionShape_Door_Right" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 304, 120 )
shape = SubResource( 9 )

[connection signal="area_entered" from="Door_Top/Door_top_TravelArea" to="." method="_on_Door_top_TravelArea_area_entered"]
[connection signal="area_entered" from="Door_Bottom/Door_bottom_TravelArea" to="." method="_on_Door_bottom_TravelArea_area_entered"]
[connection signal="area_entered" from="Door_Right/Door_right_TravelArea" to="." method="_on_Door_right_TravelArea_area_entered"]
[connection signal="area_entered" from="Door_Left/Door_left_TravelArea" to="." method="_on_Door_left_TravelArea_area_entered"]
